--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -13,4 +17,11 @@ main {
 main p {
     width: 60%;
     text-align: center;
+}
+
+button {
+    background-color: darkslateblue;
+    border-radius: 5px 5px 5px 5px;
+    color: white;
+    border: 0;
 }
