--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ header {
     justify-content: space-between;
 }
 
-main {
+main div {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,4 +24,18 @@ button {
     border-radius: 5px 5px 5px 5px;
     color: white;
     border: 0;
+    height: 40px;
+    width: 100px;
+}
+
+.listbutton {
+    background-color: darkslateblue;
+    border-radius: 10px;
+    margin: 5px;
+    padding: 10px;
+}
+
+.listbutton:hover {
+    color: white;
+    cursor: pointer;
 }
