--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ button {
     width: 100px;
 }
 
-.listbutton0 {
+.listbutton {
     background-color: darkslateblue;
     border-radius: 10px;
     margin: 5px;
