--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,14 @@ button {
     color: white;
     cursor: pointer;
 }
+
+.initials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+}
+
+.playagain {
+    width: 80%;
+}
