highscores organized by top 5

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,3 +88,13 @@ button {
 .playagain {
     width: 40%;
 }
+
+.scoreboard {
+    display: none;
+}
+
+.scoreboard h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
